# lucms

./: .env  .gitignore  Cargo.toml  README.md  compose.yml
migrations/: 20231101074350_initial.sql  20240227172317_initial_migration.sql  initial_migration.sql
src/: hello.rs  main.rs  query_builder.rs  todo.rs  utilities.rs
static/: index.html
