[package]
name = "lucms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "openapi-explorer"]}
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
